Use correct scrollbar location for all sessions when using --profile=file

BUG: 104741

svn path=/branches/KDE/3.5/kdebase/konsole/; revision=461550